--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,13 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+#Discord bot
+.env
+*.db
+*.db.*
+*.zip
+*.enc
+__pycache__/
+venv/
+tankbot.log
